# managecraft

./: .gitignore  Cargo.toml  README.md  mc_mng.code-workspace
.github/workflows/: default.yml  release.yml
src/: app_commands.rs  commands.rs  lib.rs  main.rs  settings.rs
src/commands/: execute.rs  mod.rs  save_all.rs  say.rs  time.rs
